fix gap

--- a/public/css/FacsEditor.css
+++ b/public/css/FacsEditor.css
@@ -32,7 +32,7 @@
     position: absolute;
     width: 100%;
     z-index: 800;
-    top: 63px;
+    top: 62px;
     border-bottom: 1px solid gray;
     background: white;
 }
